[package]
name = "burrow"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
bincode = "1"
crossterm = "0.29.0"
libp2p = { version = "0.56.0", features = ["tcp", "tokio", "noise", "yamux", "dns", "gossipsub", "mdns", "identify", "macros"] }
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.21.0", features = ["v7", "serde"] }
