[package]
name = "burrow"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1.0.101"
async-trait = "0.1"
bincode = "1"
crossterm = "0.29.0"
libp2p = { version = "0.56.0", features = ["tcp", "tokio", "noise", "yamux", "dns", "gossipsub", "mdns", "identify", "macros"] }
libsignal-protocol = { git = "https://github.com/signalapp/libsignal", branch = "main" }
rand = "0.9"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
thiserror = "2.0"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.21.0", features = ["v7", "serde"] }

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/signalapp/curve25519-dalek", tag = "signal-curve25519-4.1.3" }
